--- a/client/bower.json
+++ b/client/bower.json
@@ -11,7 +11,8 @@
     "moment": "~2.10.6",
     "angular": "~1.4.2",
     "angular-translate-loader-static-files": "^2.11.0",
-    "angular-translate": "^2.11.0"
+    "angular-translate": "^2.11.0",
+    "ng-dialog": "^0.6.2"
   },
   "devDependencies": {},
   "resolutions": {
