--- a/client/bower.json
+++ b/client/bower.json
@@ -14,7 +14,8 @@
     "angular-translate": "^2.11.0",
     "ng-dialog": "^0.6.2",
     "angular-websocket": "^2.0.0",
-    "term.js": "^0.0.7"
+    "term.js": "^0.0.7",
+    "sockjs-client": "^1.1.1"
   },
   "devDependencies": {},
   "resolutions": {
