--- a/server/pom.xml
+++ b/server/pom.xml
@@ -199,12 +199,9 @@
 			<version>3.0.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-websocket</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-messaging</artifactId>
+			<groupId>javax.websocket</groupId>
+			<artifactId>javax.websocket-api</artifactId>
+			<version>1.1</version>
 		</dependency>
 
 
@@ -273,7 +270,20 @@
 					<port>9000</port>
 					<path>/</path>
 					<uriEncoding>UTF-8</uriEncoding>
-					<server>tomcat7</server>
+					<server>tomcat8</server>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>9.1.0.RC2</version>
+				<configuration>
+					<httpConnector>
+						<port>9000</port>
+					</httpConnector>
+					<webApp>
+						<contextPath>/</contextPath>
+					</webApp>
 				</configuration>
 			</plugin>
 		</plugins>
