--- a/server/pom.xml
+++ b/server/pom.xml
@@ -9,7 +9,7 @@
 	<url>http://dockress.cokapp.com</url>
 	<properties>
 		<spring.version>4.0.5.RELEASE</spring.version>
-		<java.version>1.7</java.version>
+		<java.version>1.8</java.version>
 		<servlet.version>3.1.0</servlet.version>
 		<mybatis.version>3.2.8</mybatis.version>
 		<mapper.version>3.1.3</mapper.version>
@@ -276,7 +276,7 @@
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.1.0.RC2</version>
+				<version>9.3.9.v20160517</version>
 				<configuration>
 					<httpConnector>
 						<port>9000</port>
