--- a/server/pom.xml
+++ b/server/pom.xml
@@ -109,6 +109,7 @@
 			<version>1.8.5</version>
 		</dependency>
 
+		<!-- 本项目依赖 -->
 		<dependency>
 			<groupId>com.github.docker-java</groupId>
 			<artifactId>docker-java</artifactId>
@@ -119,7 +120,13 @@
 			<artifactId>javax.websocket-api</artifactId>
 			<version>1.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.google.code.findbugs</groupId>
+			<artifactId>annotations</artifactId>
+			<version>3.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<finalName>dockress</finalName>
