--- a/client/bower.json
+++ b/client/bower.json
@@ -18,7 +18,8 @@
     "sockjs-client": "^1.1.1",
     "highcharts-ng": "^0.0.12",
     "highcharts": "^4.2.6",
-    "angular-sanitize": "^1.5.8"
+    "angular-sanitize": "^1.5.8",
+    "angular-material": "^1.1.1"
   },
   "devDependencies": {},
   "resolutions": {
