--- a/client/package.json
+++ b/client/package.json
@@ -7,15 +7,12 @@
     "url": "git+https://github.com/cokapp/dockress.git"
   },
   "license": "MIT",
-  "dependencies": {
-  },
+  "dependencies": {},
   "scripts": {
     "install": "bower install && gulp build",
     "start": "gulp serve:dist"
   },
   "devDependencies": {
-    "gulp-cssnano": "^2.0.0",
-    "gulp-htmlmin": "^1.3.0",
     "browser-sync": "~2.9.11",
     "browser-sync-spa": "~1.0.3",
     "chalk": "~1.1.1",
@@ -27,16 +24,19 @@
     "gulp-angular-templatecache": "~1.8.0",
     "gulp-autoprefixer": "~3.0.2",
     "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.0.0",
     "gulp-eslint": "~1.0.0",
     "gulp-filter": "~3.0.1",
     "gulp-flatten": "~0.2.0",
+    "gulp-htmlmin": "^1.3.0",
     "gulp-inject": "~3.0.0",
     "gulp-less": "~3.0.3",
     "gulp-load-plugins": "~0.10.0",
     "gulp-ng-annotate": "~1.1.0",
     "gulp-protractor": "~1.0.0",
     "gulp-rename": "~1.2.2",
-    "gulp-replace": "~0.5.4",
+    "gulp-replace": "^0.5.4",
+    "gulp-replace-task": "^0.11.0",
     "gulp-rev": "~6.0.1",
     "gulp-rev-replace": "~0.4.3",
     "gulp-size": "~2.0.0",
@@ -47,6 +47,7 @@
     "http-proxy-middleware": "~0.9.0",
     "lodash": "~3.10.1",
     "main-bower-files": "~2.9.0",
+    "minimist": "^1.2.0",
     "uglify-save-license": "~0.4.1",
     "wiredep": "~2.2.2",
     "wrench": "~1.5.8"
