--- a/_docker/Dockerfile
+++ b/_docker/Dockerfile
@@ -1,22 +1,20 @@
 FROM openjdk:8-jre
 MAINTAINER dev@cokapp.com
 
-ENV TMPDIR /tmp/dockress
-ENV MAINDIR /root/dockress
+RUN mkdir /tmp/dockress \
+	&& mkdir /root/dockress
 
-RUN mkdir $TMPDIR \
-	&& mkdir $MAINDIR
+WORKDIR /tmp/dockress
 
-WORKDIR $TMPDIR
+ENV DOCKER_HOST tcp://192.168.79.128:2375
 
 #安装jetty
 #RUN wget http://repo1.maven.org/maven2/org/eclipse/jetty/jetty-distribution/9.3.11.v20160721/jetty-distribution-9.3.11.v20160721.zip \
 #        && unzip jetty-distribution-9.3.11.v20160721.zip -d jetty
-COPY ./jetty-distribution-9.3.11.v20160721.zip $TMPDIR
+COPY ./jetty-distribution-9.3.11.v20160721.zip /tmp/dockress
 RUN unzip jetty-distribution-9.3.11.v20160721.zip \
-	&& mv jetty-distribution-9.3.11.v20160721 $MAINDIR/jetty
+	&& mv jetty-distribution-9.3.11.v20160721 /root/dockress/jetty
 
-ENV NGINX_VERSION 1.10.1-1~jessie
 #安装nginx
 #RUN wget http://nginx.org/download/nginx-1.10.1.tar.gz \
 #        && tar xf nginx-1.10.1.tar.gz -d nginx
@@ -24,28 +22,22 @@ RUN apt-key adv --keyserver hkp://pgp.mit.edu:80 --recv-keys 573BFD6B3D8FBC64107
 	&& echo "deb http://nginx.org/packages/debian/ jessie nginx" >> /etc/apt/sources.list \
 	&& apt-get update \
 	&& apt-get install --no-install-recommends --no-install-suggests -y \
-						ca-certificates \
-						nginx=${NGINX_VERSION} \
-						nginx-module-xslt \
-						nginx-module-geoip \
-						nginx-module-image-filter \
-						nginx-module-perl \
-						nginx-module-njs \
-						gettext-base
+                                                vim \
+						nginx=1.10.1-1~jessie
 
 COPY ./nginx.conf /etc/nginx/nginx.conf  
 
 #添加服务端
-COPY ./dockress.war $MAINDIR/jetty/webapps/ROOT.war
+COPY ./dockress.war /root/dockress/jetty/webapps/ROOT.war
 
 #添加客户端
-COPY ./client $MAINDIR/dockress-client
+COPY ./client /root/dockress/client
+
+
+WORKDIR /root/dockress
+
+VOLUME /root/dockress/client
+EXPOSE 80
 
 COPY ./docker-entrypoint.sh /
-
-EXPOSE 80
-EXPOSE 8080
-
 ENTRYPOINT ["/docker-entrypoint.sh"]
-#CMD ["/bin/bash", "/docker-entrypoint.sh"]
-#CMD ["java","-jar","/root/workspace/jetty/start.jar"]
