--- a/_docker/nginx.conf
+++ b/_docker/nginx.conf
@@ -1,23 +1,44 @@
 worker_processes  1;
+user root;
 
 events {
     worker_connections  1024;
 }
 
-
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
+    include /etc/nginx/mime.types;
+    access_log  /var/log/nginx/access.log;
+    charset   utf-8;
 
-    sendfile        on;
-    keepalive_timeout  65;
-
-    server {
-        listen       80;
-
-        location / {
-            root   /root/dockress/dockress-client;
-        }
-
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
     }
-}
+    
+    server {
+          listen 80;
+          #SOKET请求
+          location ^~ /ws/ {
+            proxy_pass http://localhost:8080;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+          }
+          #API请求
+          location ^~ /api/ {
+            proxy_pass http://localhost:8080;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          }
+          #其它请求
+          location  / {
+            root /root/dockress/client;
+          }
+          
+    }
+}                 
