--- a/_docker/Dockerfile
+++ b/_docker/Dockerfile
@@ -10,7 +10,7 @@ WORKDIR /root/dockress
 
 #获取JDK
 #ADD ./bin/jre-8u102-linux-x64.rpm /var/tmp/jre-8u102-linux-x64.rpm
-RUN curl -L "http://download.oracle.com/otn-pub/java/jdk/8u102-b14/jre-8u102-linux-x64.rpm" -H "Cookie: oraclelicense=accept-securebackup-cookie"  -H "Connection: keep-alive" -O /var/tmp/jre-8u102-linux-x64.rpm
+RUN curl -L "http://download.oracle.com/otn-pub/java/jdk/8u102-b14/jre-8u102-linux-x64.rpm" -H "Cookie: oraclelicense=accept-securebackup-cookie"  -H "Connection: keep-alive" -o /var/tmp/jre-8u102-linux-x64.rpm
 
 #安装JDK
 RUN rpm -ivh /var/tmp/jre-8u102-linux-x64.rpm \
