--- a/server/src/main/resources/docker-java.properties
+++ b/server/src/main/resources/docker-java.properties
@@ -1,6 +1,6 @@
-DOCKER_HOST=tcp://ct.home:2375
-#DOCKER_TLS_VERIFY=1
-#DOCKER_CERT_PATH=/home/user/.docker/certs
+DOCKER_HOST=tcp://192.168.99.100:2376
+DOCKER_TLS_VERIFY=1
+DOCKER_CERT_PATH=C:\\Users\\heichl\\.docker\\machine\\machines\\aliyun
 #DOCKER_CONFIG=/home/user/.docker
 #api.version=1.23
 #registry.url=https://index.docker.io/v1/
